--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="./index.js"></script>
         <link rel="stylesheet" href="index.css">
         <title>Stablecoin</title>
     </head>
     <body>
+        <div id="app"></div>
+        <script src="./index.js"></script>
     </body>
 </html>
